--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,11 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style=" background-color: rgb(240, 233, 233);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- <canvas id="web"></canvas> -->
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -40,4 +42,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="../src//components/SpiderCss.js"></script>
 </html>
